--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,20 +9,46 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">ErrorValidations</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">6,878</td><td>ErrorHandlings</td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">PlaceOrderTest</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td>ErrorHandlings</td><td></td></tr>
-<tr><th>Total</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">6,879</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">ErrorValidations</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">9,676</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">PlaceOrderTest</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">2</td><td class="num">37,028</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">0</th><th class="num attn">1</th><th class="num">0</th><th class="num attn">3</th><th class="num">46,704</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ErrorValidations &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">seleniumFrameworkPractice.refactor.tests.ErrorValidations</td><td><a href="#m0">incorrectCredentialsTest</a></td><td rowspan="1">1735785191889</td><td rowspan="1">740</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ErrorValidations &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">seleniumFrameworkPractice.refactor.tests.ErrorValidations</td><td><a href="#m0">incorrectCredentialsTest</a></td><td rowspan="1">1736217990194</td><td rowspan="1">761</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">PlaceOrderTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">seleniumFrameworkPractice.refactor.tests.PlaceOrderTest</td><td><a href="#m1">SubmitOrderTest</a></td><td rowspan="2">1736218013430</td><td rowspan="2">5229</td></tr><tr class="failedeven"><td><a href="#m2">SubmitOrderTest</a></td></tr><tr><th colspan="4">PlaceOrderTest &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">seleniumFrameworkPractice.refactor.tests.PlaceOrderTest</td><td><a href="#m3">OrderpageProductValidation</a></td><td rowspan="1">1736218020229</td><td rowspan="1">0</td></tr></tbody>
 </table>
 <h2>ErrorValidations</h2><h3 id="m0">seleniumFrameworkPractice.refactor.tests.ErrorValidations#incorrectCredentialsTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [ Incorrect email or password] but found [Incorrect email or password.]
-	at seleniumFrameworkPractice.refactor.tests.ErrorValidations.incorrectCredentialsTest(ErrorValidations.java:15)
-	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
+	at seleniumFrameworkPractice.refactor.tests.ErrorValidations.incorrectCredentialsTest(ErrorValidations.java:23)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:831)
+... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>PlaceOrderTest</h2><h3 id="m1">seleniumFrameworkPractice.refactor.tests.PlaceOrderTest#SubmitOrderTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=Sura@1234, product_Name=BANARSI SAREE, username=sura@test.com}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Thankyou for the order.] but found [THANKYOU FOR THE ORDER.]
+	at seleniumFrameworkPractice.refactor.tests.PlaceOrderTest.SubmitOrderTest(PlaceOrderTest.java:52)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
 	at java.base/java.lang.Thread.run(Thread.java:831)
 ... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>PlaceOrderTest</h2></body>
+<h3 id="m2">seleniumFrameworkPractice.refactor.tests.PlaceOrderTest#SubmitOrderTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=Sura@1234, product_Name=ADIDAS ORIGINAL, username=Surendhar@selenium.com}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Thankyou for the order.] but found [THANKYOU FOR THE ORDER.]
+	at seleniumFrameworkPractice.refactor.tests.PlaceOrderTest.SubmitOrderTest(PlaceOrderTest.java:52)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:831)
+... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">seleniumFrameworkPractice.refactor.tests.PlaceOrderTest#OrderpageProductValidation</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method seleniumFrameworkPractice.refactor.tests.PlaceOrderTest.OrderpageProductValidation() on instance seleniumFrameworkPractice.refactor.tests.PlaceOrderTest@58e1d9d depends on not successfully finished methods 
+[seleniumFrameworkPractice.refactor.tests.PlaceOrderTest.SubmitOrderTest() on instance seleniumFrameworkPractice.refactor.tests.PlaceOrderTest@58e1d9d]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:831)
+... Removed 8 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
 </html>
