--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,21 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">ErrorValidations</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">17,658</td><td>ErrorHandlings</td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">PlaceOrderTest</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td>ErrorHandlings</td><td></td></tr>
-<tr><th>Total</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num attn">1</th><th class="num">17,659</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,462</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ErrorValidations &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">seleniumFrameworkPractice.refactor.tests.ErrorValidations</td><td><a href="#m0">incorrectCredentialsTest</a></td><td rowspan="1">1736220772613</td><td rowspan="1">637</td></tr><tr><th colspan="4">ErrorValidations &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="1">seleniumFrameworkPractice.refactor.tests.ErrorValidations</td><td><a href="#m1">incorrectCredentialsTest</a></td><td rowspan="1">1736220763525</td><td rowspan="1">858</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">seleniumFrameworkPractice.refactor.tests.UploadDownloadTest</td><td><a href="#m0">Sampletest</a></td><td rowspan="1">1737643179032</td><td rowspan="1">11407</td></tr></tbody>
 </table>
-<h2>ErrorValidations</h2><h3 id="m0">seleniumFrameworkPractice.refactor.tests.ErrorValidations#incorrectCredentialsTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [ Incorrect email or password] but found [Incorrect email or password.]
-	at seleniumFrameworkPractice.refactor.tests.ErrorValidations.incorrectCredentialsTest(ErrorValidations.java:17)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">seleniumFrameworkPractice.refactor.tests.ErrorValidations#incorrectCredentialsTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [ Incorrect email or password] but found [Incorrect email or password.]
-	at seleniumFrameworkPractice.refactor.tests.ErrorValidations.incorrectCredentialsTest(ErrorValidations.java:17)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>PlaceOrderTest</h2></body>
+<h2>Default test</h2><h3 id="m0">seleniumFrameworkPractice.refactor.tests.UploadDownloadTest#Sampletest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
 </html>
